--- a/yelp-scraper/serverless.yml
+++ b/yelp-scraper/serverless.yml
@@ -13,21 +13,43 @@
 
 service: yelp-scraper
 # app and org for use with dashboard.serverless.com
-#app: your-app-name
-#org: your-org-name
+app: hello-serverless
+org: m00p1ng
 
 # You can pin your service to only deploy with a specific Serverless version
 # Check out our docs for more details
 frameworkVersion: '2'
 
+plugins:
+  - serverless-offline-scheduler
+
 provider:
   name: aws
   runtime: nodejs12.x
   lambdaHashingVersion: 20201221
+  stage: dev
+  region: ap-southeast-1
+  environment:
+    DYNAMODB_TABLE: yelp-ratings
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - "lambda:InvokeFunction"
+      Resource: "*"
+    - Effect: Allow
+      Action:
+        - dynamodb:Query
+        - dynamodb:Scan
+        - dynamodb:GetItem
+        - dynamodb:PutItem
+        - dynamodb:UpdateItem
+        - dynamodb:DeleteItem
+      Resource: "arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self.provider.environment.DYNAMODB_TABLE}"
+package:
+  include:
+    - utils/**
 
 # you can overwrite defaults here
-#  stage: dev
-#  region: us-east-1
 
 # you can add statements to the Lambda function's IAM Role here
 #  iamRoleStatements:
@@ -46,8 +68,6 @@ provider:
 #            - "/*"
 
 # you can define service wide environment variables here
-#  environment:
-#    variable1: value1
 
 # you can add packaging information here
 #package:
@@ -58,8 +78,12 @@ provider:
 #    - include-me-dir/**
 
 functions:
-  hello:
-    handler: handler.hello
+  scrape:
+    handler: handler.scrape
+  launch_scrapers:
+    handler: handler.launch_scrapers
+    events:
+      - schedule: rate(1 minute)
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
