--- a/yelp-scraper/package.json
+++ b/yelp-scraper/package.json
@@ -9,5 +9,8 @@
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "serverless-offline-scheduler": "^0.4.2"
   }
 }
